basic searching fully functional

--- a/Nutrition/Base.lproj/Main.storyboard
+++ b/Nutrition/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Q9q-wX-5tG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6FQ-30-KSY"/>
-                            <constraint firstItem="Q9q-wX-5tG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7mv-Vp-3NC"/>
+                            <constraint firstItem="Q9q-wX-5tG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="36" id="7mv-Vp-3NC"/>
                             <constraint firstAttribute="trailing" secondItem="Q9q-wX-5tG" secondAttribute="trailing" id="oPL-BH-o0E"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Q9q-wX-5tG" secondAttribute="bottom" id="qVx-IR-23P"/>
                         </constraints>
